Fixed accept link not leading to the correct location in issues_discuss_view.php.
Fixed a bug where a person could assign themselves to their own issues in issues_assign.php.

v0.2.02
-------
Fixed an issue where technicians could not see All issues.

v0.3.00
-------
Renamed Multiple Files to either have the prefix helpDesk or issues.
Recoded the Technician System to allow for more control and in general better usage across the system.
Added Technician Groups to allow for technician permission to be set and for easier control.

v0.3.01
-------
Made Manage Technician Groups a default Permission.
Fixed helpDesk_createTechnicianGroup using the wrong permission.
Fixed Manage Technician having the wrong entry and URLList value.

v0.3.02
-------
Fixed some permissions having the wrong URLs.

v0.3.03
-------
Fixed one permission having the wrong URL.

v0.3.04
-------
Fixed helpDesk_setTechGroup.php not having the technicians group as a default.
Changed some icons to others to fit the theme of the rest of gibbon.

v0.3.05
-------
Added row coloring to tables to fit with the rest of gibbon.
Allowed Resolved issues to be viewed.

v0.3.10
-------
Added ability to Reassign Issue.
Added Reassign permission to Technician Groups.
Fixed the assigning system.
Fixed breadcrumbs on multiple files.

v0.3.11
-------
Combined text links with image links.
Fixed a double notification bug.
Added Issue Name to end of notification.

v0.3.12
-------
Added Assign button to issues_discussView.php.
Fixed a bug where technicians would not get a notification when a post was made.
Added a feature where the creater of an issue would will no longer get a notification.
Added spaces before the brackets in the notifications.

v0.3.13
-------
Added spaces before the brackets in the notifications.
Fixed technicians who had issues created on their behalfs getting two notifications.

v0.3.14
-------

v0.3.15
-------